# esp32-idf-epaper-embed

./: .cproject  CMakeLists.txt  README.md  README_CN.md
components/ws_epaper/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  DEV_Config2.c  EPD.h  GUI_Paint.c  GUI_Paint.h  dev_config_idf.h  font12CN.c  font24CN.c
components/ws_epaper/utility/: Debug.h  EPD_13in3b.h  EPD_13in3k.h  EPD_1in02.h  EPD_1in54.h  EPD_1in54_V2.h  EPD_1in54b.h  EPD_1in54b_V2.h  EPD_1in54c.h  EPD_1in64g.h  EPD_2in13.h  EPD_2in13_V2.h  EPD_2in13_V3.h  EPD_2in13_V4.h  EPD_2in13b_V3.h  EPD_2in13b_V4.h  EPD_2in13bc.h  EPD_2in13d.h  EPD_2in13g.h  EPD_2in15b.h  EPD_2in15g.h  EPD_2in36g.h  EPD_2in66.h  EPD_2in66b.h  EPD_2in66g.h  EPD_2in7.h  EPD_2in7_V2.h  EPD_2in7b.h  EPD_2in7b_V2.h  EPD_2in9.h  EPD_2in9_V2.c  EPD_2in9_V2.h  EPD_2in9b_V3.h  EPD_2in9b_V4.h  EPD_2in9bc.h  EPD_2in9d.h  EPD_3in0g.h  EPD_3in52.h  EPD_3in7.h  EPD_4in01f.h  (+23 more)
main/: CMakeLists.txt  ajax.c  ajax2.c  ajax3.c  bremen.c  main.c  pic.h  tot.c
